    - Added dotted silence rendering
    - Printing : fixed vertical measure dividers to play nicely with scores
    - Fixed crash when printing a single track
    - Key signature now appears on printed scores
    - Marked repetition detection as experimental, disabled by default
    - Fixed printing of notes above/below score (previously broken)
    - Further improved vertical division of space

1.2b5
- More minor linux fixes
- Added Code::Blocks project
- Fixed crash when clicking below last track
- Major refactor of render system : allow software rendering where OpenGL is not optimal
- Fixed multiple printing-related crashes and infinite recursions
- Removed GLUT dependency from OpenGL renderer. consequence : anti-aliased fonts and better Linux support.
- Fixed time signature editor popping-up when opening a file
- Fixed rounding issues when zooming
- Fixed playback ending too quickly
- Allowed moving notes by octave with shift+up/down
- Allowed moving notes by one measure with shift+left/right
- G clef is now rendered (roughly) on printed scores
- You can now choose the default view for score editor in preferences
- Fixed repetiton detection on multiple-track printing
- Improvements to maximize mode

1.2b4
- Switched to unified (native) toolbar on mac  (WARNING: requires patching wxWidgets, see docs)
- A few linux changes
- Fixed control editor to allow minimal value (0), namely allowing to turn Sustain off.
- Fixed (yet another) bug in accidental handling
- More intelligently decide if notes on middle C belong to F clef or G clef
- In editor popup menus, don't show score options in keyboard mode
- Fixed docking tracks, which was broken in last release
- Made 'follow playback' easier to follow by scrolling only on measure change
- Fixed undoing guitar tuning changes
- When printing multiple tracks, draw a line between them to make clear they belong toghether
- Fixed silences being drawn in repetitions when printing
- More minot tweaks to printing